# KnowledgeAug

./: README.md  generate_t5_input.py  install.sh  main.py  requirements.txt
configs/: generate_anli_sample.json  generate_comm_qa_sample.json  generate_ob_qa_mc_sample.json  generate_qasc_mc_sample.json  generate_qasc_sample.json  generate_qasc_sample2.json  generate_qasc_sc_sample.json  test_distributed.json  train_anli_augment.json  train_anli_sample.json  train_comm_qa2_augment.json  train_comm_qa2_bespoke_augment.json  train_comm_qa2_no_augment.json  train_comm_qa2_only_composite_augment.json  train_comm_qa2_only_non_composite_augment.json  train_comm_qa2_other_augment.json  train_comm_qa_augment.json  train_comm_qa_sample.json  train_ob_qa_augment.json  train_ob_qa_augment_compare.json  train_ob_qa_bespoke_mc_augment.json  train_ob_qa_gail.json  train_ob_qa_mc_augment.json  train_ob_qa_mc_only_composite_augment.json  train_ob_qa_mc_only_non_composite_augment.json  train_ob_qa_mc_other_augment.json  train_ob_qa_mc_sample.json  train_ob_qa_mc_t5_3b_augment.json  train_ob_qa_mc_xxlarge_augment.json  train_ob_qa_no_augment.json  train_ob_qa_org_facts_augment.json  train_ob_qa_sample.json  train_ob_qa_sc_augment.json  train_ob_qa_sc_sample.json  train_ob_qa_t5_3b_no_augment.json  train_ob_qa_xxlarge_no_augment.json  train_qasc_augment.json  train_qasc_bespoke_sc_augment.json  train_qasc_mc_augment.json  train_qasc_mc_sample.json  (+16 more)
encoder/dataset/: anli.py  arc.py  commonsense_qa.py  commonsense_qa2.py  download.py  openbook_qa.py  openbook_qa_augment.py  openbook_qa_augment_compare.py  qasc.py  sample.py  social_iqa.py  utils.py
encoder/dataset/matcher/matcher_src/: CMakeLists.txt  concept_net.cpp  init.cpp  main.cpp  matcher.cpp  matcher.h
encoder/models/: embedder.py
encoder/prompter/: commonsense_qa.py  commonsense_qa2.py
encoder/searcher/: searcher.py
encoder/trainer/: anli_augment_trainer.py  anli_sample_trainer.py  arc_search_trainer.py  arc_trainer.py  augment_base_trainer.py  bespoke_base_trainer.py  commonsense_qa2_augment_trainer.py  commonsense_qa2_bespoke_augment_trainer.py  commonsense_qa_augment_trainer.py  commonsense_qa_sample_trainer.py  commonsense_qa_search_trainer.py  commonsense_qa_trainer.py  ensemble_trainer.py  openbook_qa_augment_compare_trainer.py  openbook_qa_augment_trainer.py  openbook_qa_bespoke_augment_trainer.py  openbook_qa_gail_trainer.py  openbook_qa_mc_sample_trainer.py  openbook_qa_sample_trainer.py  openbook_qa_sc_sample_trainer.py  openbook_qa_search_trainer.py  openbook_qa_trainer.py  qasc_augment_trainer.py  qasc_bespoke_augment_trainer.py  qasc_mc_sample_trainer.py  train.py  (+7 more)
(+19 files in other folders)
